# cc-streamdeck

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/cc_streamdeck/: __init__.py  config.py  daemon.py  device.py  focus.py  hook.py  protocol.py  renderer.py  risk.py  settings.py
tests/: conftest.py  test_daemon.py  test_device.py  test_focus.py  test_hook.py  test_protocol.py  test_renderer.py  test_risk.py  test_settings.py
