[project]
name = "cc-streamdeck"
version = "0.1.0"
description = "Stream Deck Mini interface for Claude Code permission prompts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "streamdeck>=0.9.5",
    "Pillow>=10.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
cc-streamdeck-daemon = "cc_streamdeck.daemon:main"
cc-streamdeck-hook = "cc_streamdeck.hook:main"
cc-streamdeck-focus = "cc_streamdeck.focus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_streamdeck"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.2",
]
